shift remove unnecessary scss file fix button margins on mobile view in wallet encashment

--- a/public/themes/shift/sass/wallet_encashment.scss
+++ b/public/themes/shift/sass/wallet_encashment.scss
@@ -14,16 +14,20 @@ $text-dark: #272c2f;
 
 	.main-member-header
 	{
-		.left {
+		.left 
+		{
 
-			.text {
+			.text 
+			{
 
-				.name {
+				.name 
+				{
 					font-size: 21px;
 					font-weight: $semi-bold;
 					color: $text-dark !important;
 				}
-				.sub {
+				.sub 
+				{
 					font-size: 15px !important;
 					color: $text-light !important;
 				}
